ingresstest/nl.yaml
---
################################################################################
## K8S Default Backend for Nginx if no endpoint is available e.g. 404 servers
###############################################################################
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-default-backend
  namespace: kube-system
  labels:
    app: nginx-default-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-default-backend
  template:
    metadata:
      labels:
        app:  nginx-default-backend
        group: lb
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name:  defaultbackend
        # Any image is permissable as long as: 1. It serves a 404 page at /
        # and 2. It serves 200 on a /healthz endpoint
        image: 172.16.155.136:5000/uwebserverv6 
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 5
        ports:
        - containerPort: 8000
        resources:
          limits:
            cpu: 10m
            memory: 20Mi
          requests:
            cpu: 10m
            memory: 20Mi

---
################################################################################
## K8S Service configuration default backend. in NGINX Deployment config
## use arg --default-backend-service=$(POD_NAMESPACE)/nginx-default-backend
################################################################################
apiVersion: v1
kind: Service
metadata:
  name: nginx-default-backend
  namespace: kube-system
  labels:
    app: nginx-default-backend
    group: lb
spec:
  type: NodePort
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: nginx-default-backend

---
############################################################################################
## K8S deplox config for NGINX LB gcr.io/google_containers/nginx-ingress-controller
## https://github.com/kubernetes/contrib/tree/master/ingress/controllers/nginx
#########################################################################################
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-ingress-controller
  namespace: kube-system
  labels:
    app: nginx-ingress-lb
    group: lb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-ingress-lb
  template:
    metadata:
      labels:
        app: nginx-ingress-lb
        name: nginx-ingress-lb
        group: lb
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: nginx-ingress-lb
        image: gcr.io/google_containers/nginx-ingress-controller:0.8.3
        imagePullPolicy: IfNotPresent
        readinessProbe:
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
        livenessProbe:
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 1
        # use downward API
        ports:
        - containerPort: 80
          hostPort: 80
        ## if you terminate SSL at the AWS ELB you don't need port 443 here
        - containerPort: 18080 ## we expose 18080 to access nginx stats in url /nginx-status
          hostPort: 18080
        ## https://github.com/kubernetes/contrib/issues/1662 --watch-namespace  to limit on one namespace
        args:
        - /nginx-ingress-controller
        - --default-backend-service=$(POD_NAMESPACE)/nginx-default-backend
        - --nginx-configmap=$(POD_NAMESPACE)/nginx-ingress-lb-cfg
---
#######################################
# K8S NGINX LB Controller Service
#######################################
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-lb
  namespace: kube-system
  labels:
    app: nginx-ingress-lb
    group: lb
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-internal: 0.0.0.0/0
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "YOUR_AWS_CERT_ID"
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: https
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
spec:
  type: LoadBalancer
  ports:
  - port: 443
    targetPort: 80 ## terminate ssl
    name: https
    protocol: TCP
  #- port: 80   ### disable unless you have http->https redirect or really want to support http besides https
  #  targetPort: 80
  #  name: http
  #  protocol: TCP
  - port: 18080
    targetPort: 18080
    name: nginxstatus
    protocol: TCP
  selector:
    app: nginx-ingress-lb
  externalIPs:
   - 172.16.155.128
---
